# aws-fargate

./: .dockerignore  .env.example  .gitignore  .pyproject.toml.swp  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
terraform-modules/: README-structure.md
terraform-modules/ecs/: .gitignore  backend.tf  locals.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
terraform-modules/ecs/modules/alb/: main.tf  outputs.tf  variables.tf
terraform-modules/ecs/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform-modules/ecs/modules/ecr/: main.tf  outputs.tf
terraform-modules/ecs/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform-modules/ecs/modules/iam/: main.tf  outputs.tf  variables.tf
terraform-modules/vpc/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform-modules/vpc/modules/security_group/: main.tf  variables.tf
terraform-modules/vpc/modules/vpc/: locals.tf  main.tf  nat.tf  outputs.tf  routing.tf  subnets.tf  variables.tf
terraform-modules/vpc/modules/vpc_endpoints/: main.tf  outputs.tf  variables.tf
