[project]
name = "devops-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "python-ulid>=3.1.0",
    "sqlalchemy>=2.0.49",
    "opentelemetry-api==1.33.1",
    "opentelemetry-sdk==1.33.1",
    "opentelemetry-distro==0.54b1",
    "opentelemetry-instrumentation==0.54b1",
    
    # OpenTelemetry - Instrumentations (all compatible with Python 3.12)
    "opentelemetry-instrumentation-fastapi==0.54b1",
    "opentelemetry-instrumentation-asgi==0.54b1",
    "opentelemetry-instrumentation-sqlalchemy==0.54b1",
    "opentelemetry-instrumentation-httpx==0.54b1",
    "opentelemetry-instrumentation-psycopg2==0.54b1",  # For PostgreSQL tracing
    
    # OpenTelemetry - Exporters
    "opentelemetry-exporter-otlp==1.33.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.33.1",
    
    # OpenTelemetry - Propagators (AWS X-Ray)
    "opentelemetry-propagator-aws-xray>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
